[package]
name = "nordigen2fireflyiii"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
confy = "0.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
